add openscad to environment and swith to ISO date in git

--- a/git.d/aliases.ini
+++ b/git.d/aliases.ini
@@ -28,21 +28,21 @@
     hist = for-each-ref --count=5 --sort=-committerdate --format='%(refname:short)' refs/heads/
     ; clean up all
     forget = "!git fetch -p && git branch -vv | awk '/: gone]/{print $1}' | xargs git branch -D"
-    l0 = log --pretty=format:'%Cred%H%Creset %C(bold blue)%an%C(reset) - %s - %Creset %C(yellow)%d%Creset %Cgreen(%cr)%Creset' --date=relative
+    l0 = log --pretty=format:'%Cred%H%Creset %C(bold blue)%an%C(reset) - %s - %Creset %C(yellow)%d%Creset %Cgreen(%cd)%Creset' --date=iso
     l = l0 --graph
-    la = log --graph --all --pretty=format:'%C(yellow)%H%C(cyan)%d%Creset %s %C(white)- %an, %ar%Creset'
+    la = log --graph --all --pretty=format:'%C(yellow)%H%C(cyan)%d%Creset %s %C(white)- %an, %ad%Creset' --date=iso
     lf = l --first-parent
     lfm = l --no-merges --first-parent
-    ll = log --stat=150 --format=fuller
-    llf = log --stat=150 --format=fuller --first-parent
-    llg = log --color --graph --pretty=format:'%C(bold white)%H %d%Creset%n%s%n%+b%C(bold blue)%an <%ae>%Creset %C(bold green)%cr (%ci)'
+    ll = log --stat=150 --format=fuller --date=iso
+    llf = log --stat=150 --format=fuller --first-parent --date=iso
+    llg = log --color --graph --pretty=format:'%C(bold white)%H %d%Creset%n%s%n%+b%C(bold blue)%an <%ae>%Creset %C(bold green)%cd' --date=iso
     lm = l --all-match
     lo = l --no-merges --first-parent
     lp = l --first-parent
-    list-remote-branches-by-date-csv = branch -r --sort=committerdate  --format="%(refname:short);%(committerdate:short);%(authorname);%(subject)"
-    list-remote-branches-by-date-pretty = branch -r --sort=-committerdate --format="%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:magenta)%(authorname)%(color:reset)" --color=always
-    ; owners = for-each-ref --sort=-committerdate --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(color:red)%(objectname:short)%(color:reset) - %(contents:subject) - %(authorname) (%(color:green)%(committerdate:relative)%(color:reset))'
-    owners = for-each-ref --sort=-committerdate --format='%(color:red)%(objectname)%(color:reset) (%(color:green)%(committerdate:relative)%(color:reset)) %(refname:short) - %(color:bold blue)%(authorname)%(color:reset)'
+    list-remote-branches-by-date-csv = branch -r --sort=committerdate  --format="%(refname:short);%(committerdate:iso);%(authorname);%(subject)"
+    list-remote-branches-by-date-pretty = branch -r --sort=-committerdate --format="%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:iso)|%(color:blue)%(subject)|%(color:magenta)%(authorname)%(color:reset)" --color=always
+    ; owners = for-each-ref --sort=-committerdate --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(color:red)%(objectname:short)%(color:reset) - %(contents:subject) - %(authorname) (%(color:green)%(committerdate:iso)%(color:reset))'
+    owners = for-each-ref --sort=-committerdate --format='%(color:red)%(objectname)%(color:reset) (%(color:green)%(committerdate:iso)%(color:reset)) %(refname:short) - %(color:bold blue)%(authorname)%(color:reset)'
     ; check out a local copy of a PR. https://gist.github.com/gnarf/5406589
     pr = "!f() { git fetch -fu ${2:-origin} refs/pull/$1/head:pr/$1 && git checkout pr/$1; }; f"
     pr-clean = "!git for-each-ref refs/heads/pr/* --format='%(refname)' | while read ref ; do branch=${ref#refs/heads/} ; git branch -D $branch ; done"
