change hotkeys in Greenshot

--- a/data/Greenshot/greenshot-fixed.ini
+++ b/data/Greenshot/greenshot-fixed.ini
@@ -6,11 +6,11 @@ RegionHotkey=PrintScreen
 ; Hotkey for starting the window capture
 WindowHotkey=Alt + PrintScreen
 ; Hotkey for starting the fullscreen capture
-FullscreenHotkey=Alt + Shift + PrintScreen
+FullscreenHotkey=Ctrl + Shift + PrintScreen
 ; Hotkey for starting the last region capture
 LastregionHotkey=Shift + PrintScreen
 ; Hotkey for starting the IE capture
-IEHotkey=Ctrl + Shift + PrintScreen
+IEHotkey=None
 ; Which destinations? Possible options (more might be added by plugins) are: Editor, FileDefault, FileWithDialog, Clipboard, Printer, EMail, Picker
 Destinations=Picker
 ; Should the mouse be captured?
