sightly adjust wsl config

--- a/data/wsl.conf
+++ b/data/wsl.conf
@@ -1,6 +1,6 @@
 [automount]
 enabled = true
-root = /mnt
+root = /mnt/
 options = "metadata,umask=22,fmask=11"
 mountFsTab = true
 
@@ -14,5 +14,3 @@ appendWindowsPath = false
 [network]
 generateHosts = true
 generateResolvConf = true
-hostname = "divanov-dev-wsl"
-
