--- a/git.d/pager.ini
+++ b/git.d/pager.ini
@@ -5,8 +5,8 @@
     ; pager = cat | more.com
 
 [delta]
-    ; features = chameleon
-    features = base-dark
+    features = chameleon
+    ; features = base-dark
     ; features = base-light
     ; features = code-review-chameleon
     ; features = code-review-dark
@@ -19,7 +19,10 @@
     line-numbers = true
     side-by-side = false
     keep-plus-minus-markers = false
-    syntax-theme = Nord
+    ; syntax-theme = Nord
+    ; syntax-theme = gruvbox-dark
+    syntax-theme = OneHalfDark
+    ; syntax-theme = Vibrant Sunburst
     file-style = "#434C5E" bold
     file-decoration-style = "#434C5E" ul
     file-added-label = [+]
@@ -158,9 +161,9 @@
     plus-style = 34 234
     ; ---------------------------------
     side-by-side = false
-    syntax-theme = Nord
+    ; syntax-theme = Nord
     ; syntax-theme = gruvbox-dark
-    ; syntax-theme = OneHalfDark
+    syntax-theme = OneHalfDark
     ; syntax-theme = Vibrant Sunburst
     whitespace-error-style = 11 reverse
 
