more git aliases

--- a/git.d/aliases.ini
+++ b/git.d/aliases.ini
@@ -15,6 +15,14 @@
     csb = clone --single-branch --branch
     csbs = clone --recurse-submodules --single-branch --branch
     ; show number of commits per contributer, sorted
+    commits-daily = "git log --first-parent --date=short --pretty=format:%ad | sort | uniq -c | sort -nr"
+    commits-per-day = "!git log --first-parent --since=1.day --pretty=format:'%ad %an' --date=short | sort | uniq -c | sort -nr"
+    commits-rate-day = "!git log --first-parent --since=1.day --pretty=format:'%ad' --date=short | sort | uniq -c | awk '{sum += $1} END {print sum/NR}'"
+    commits-rate-month1 = "!git log --first-parent --since=1.month --pretty=format:'%ad' --date=short | sort | uniq -c | awk '{sum += $1} END {print sum/NR}'"
+    commits-rate-month3 = "!git log --first-parent --since=3.month --pretty=format:'%ad' --date=short | sort | uniq -c | awk '{sum += $1} END {print sum/NR}'"
+    commits-rate-month6 = "!git log --first-parent --since=6.month --pretty=format:'%ad' --date=short | sort | uniq -c | awk '{sum += $1} END {print sum/NR}'"
+    commits-rate-year = "!git log --first-parent --since=1.year --pretty=format:'%ad' --date=short | sort | uniq -c | awk '{sum += $1} END {print sum/NR}'"
+    commits-rate-total = "!git log --first-parent --pretty=format:'%ad' --date=short | sort | uniq -c | awk '{sum += $1} END {print sum/NR}'"
     count = shortlog -sn
     cont = rebase --continue
     cp = cherry-pick
