add global gitignore

--- a/git.d/core.ini
+++ b/git.d/core.ini
@@ -2,7 +2,8 @@
     attributesfile = .gitattributes
     editor = vim
     ; editor = code --wait
-    excludesfile = .gitignore
+    ; excludesfile = .gitignore
+    excludesFile = ~/.gitignore-global
     ignorecase = false
     longpaths = true
     untrackedCache = true
