starship: update git simbols

--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -149,7 +149,6 @@ version_format = "${raw}"
 disabled = false
 fish_style_pwd_dir_length = 0
 format = "[$path]($style)[$read_only]($read_only_style) "
-# home_symbol = "~"
 home_symbol = "~"
 read_only = "\uf023" # 
 read_only_style = "bold color11"
@@ -226,28 +225,27 @@ style = "bold color13"
 added_style = "bold color14"
 deleted_style = "bold color11"
 disabled = false
-format = "( ≡ [+$added]($added_style) )([-$deleted]($deleted_style))"
+format = "( [+$added]($added_style))( [-$deleted]($deleted_style))"
 ignore_submodules = false
 only_nonzero_diffs = true
 
 [git_status]
 ahead = "⇡"
 behind = "⇣"
-conflicted = "\uefcb" # 
-deleted = "\uf467" # 
+conflicted = "≠"
+# deleted = "×"
+deleted = "×"
 disabled = false
 diverged = "⇕"
 format = "( [$all_status$ahead_behind]($style))[\\]](color10)"
 ignore_submodules = false
 modified = "!"
-renamed = "»"
+renamed = "↪" #
 staged = "+"
-# stashed = "\\$"
-stashed = "\uf51d" # 
+stashed = "☰"
 style = "bold color5"
 typechanged = ""
-# untracked = "?"
-untracked = "\uf4c3" # 
+untracked = "?"
 up_to_date = ""
 use_git_executable = false
 
