--- a/tmux.conf
+++ b/tmux.conf
@@ -143,7 +143,10 @@ setw -g window-status-bell-style fg=colour255,bg=colour1,bold
 set -g message-style fg=colour232,bg=colour166,bold
 # }
 
-# TMUX plugins
+######################
+###  TMUX PLUGINS  ###
+######################
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
