starship: disable pyenv detection

--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -360,7 +360,7 @@ detect_folders = []
 disabled = false
 format = "[\\[](color10)[${symbol}${pyenv_prefix}( ${version})( \\($virtualenv\\))]($style)[\\]](color10)"
 pyenv_prefix = ""
-pyenv_version_name = true
+pyenv_version_name = false
 python_binary = [["python"],["python2"],["python3"]]
 style = "bold color13"
 symbol = "\ue73c" # 
