--- a/git.d/aliases.ini
+++ b/git.d/aliases.ini
@@ -8,6 +8,7 @@
     cbr = rev-parse --abbrev-ref HEAD
     change-commits = "!f() { VAR1=$1; VAR='$'$1; OLD=$2; NEW=$3; echo \"Are you sure for replace $VAR $OLD => $NEW ?(Y/N)\";read OK;if [ \"$OK\" = 'Y' ] ; then shift 3; git filter-branch --env-filter \"if [ \\\"${VAR}\\\" = '$OLD' ]; then export $VAR1='$NEW';echo 'to $NEW'; fi\" $@; fi;}; f "
     change-full-history = "rebase -i --root"
+    check-version = "!f() { read MJ MN P B <<< $(echo ${1} | tr '.' ' '); BR=$(git describe --tags --first-parent --abbrev=0); if [ \"${MJ}.${MN}.${P}\" == \"${BR}\" ]; then echo valid; else echo version ${1} is invalid for current branch; fi; }; f"
     ; order files by number of commits, ascending
     churn = "!f() { git log --all -M -C --name-only --format='format:' \"$@\" | sort | grep -v '^$' | uniq -c | sort | awk 'BEGIN {print \"count\tfile\"} {print $1 \"\t\" $2}' | sort -g; }; f"
     cleanup = "!git remote prune origin && git gc && git clean -df && git stash clear"
