update starship config

--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -189,7 +189,7 @@ symbol = "\uf21f " # 
 [git_branch]
 always_show_remote = false
 disabled = false
-format = "[\\[](color10)[$symbol$branch(:$remote_branch)]($style)"
+format = "[\\[](color10)[$symbol$branch(:$remote_branch)]($style)[\\]](color10)"
 ignore_branches = []
 only_attached = true
 style = "bold color15"
@@ -202,7 +202,7 @@ truncation_symbol = "…"
 [git_commit]
 commit_hash_length = 9
 disabled = false
-format = "[\\[](color10)[\ueafc $hash$tag]($style)" # 
+format = "[\\[](color10)[\ueafc $hash$tag]($style)[\\]](color10)" # 
 only_detached = true
 style = "bold color15"
 tag_disabled = false
@@ -215,7 +215,7 @@ am_or_rebase = "AM/REBASE"
 bisect = "BISECTING"
 cherry_pick = "CHERRY-PICKING"
 disabled = false
-format = " \uea64 \\([$state( $progress_current/$progress_total)]($style)\\)" # 
+format = "[\\[](color10)\uea64 \\([$state( $progress_current/$progress_total)]($style)\\)[\\[](color10)" # 
 merge = "MERGING"
 rebase = "REBASING"
 revert = "REVERTING"
@@ -225,27 +225,27 @@ style = "bold color13"
 added_style = "bold color14"
 deleted_style = "bold color11"
 disabled = false
-format = "( [+$added]($added_style))( [-$deleted]($deleted_style))"
+format = "[\\[](color10)([+$added]($added_style))( [-$deleted]($deleted_style))"
 ignore_submodules = false
 only_nonzero_diffs = true
 
 [git_status]
-ahead = "⇡"
-behind = "⇣"
-conflicted = "≠"
+ahead = "[ ⇡$count](bold color15)"
+behind = "[ ⇣$count](bold color15)"
+conflicted = "[ ≠$count](bold color11)"
 # deleted = "×"
-deleted = "×"
+deleted = "[ ×$count](bold color11)"
 disabled = false
-diverged = "⇕"
-format = "( [$all_status$ahead_behind]($style))[\\]](color10)"
+diverged = "[ ⇕](bold color11)"
+format = "([$all_status$ahead_behind]($style))[\\]](color10)"
 ignore_submodules = false
-modified = "!"
-renamed = "↪" #
-staged = "+"
-stashed = "☰"
+modified = "[ !$count](bold color13)"
+renamed = "[ ↪$count](bold color13)" #
+staged = "[ +$count](bold color14)"
+stashed = "[ ☰$count](bold color3)"
 style = "bold color5"
 typechanged = ""
-untracked = "?"
+untracked = "[ ?$count](bold color12)"
 up_to_date = ""
 use_git_executable = false
 
@@ -428,5 +428,6 @@ detect_folders = []
 disabled = false
 format = "[\\[](color10)[$symbol($version)]($style)[\\]](color10)"
 style = "bold color7"
-symbol = "\ue8d0 " # 
-version_format = "${raw}"
+symbol = "\ue8d0" # 
+version_format = ""
+# version_format = "${raw}"
