--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -225,27 +225,27 @@ style = "bold color13"
 added_style = "bold color14"
 deleted_style = "bold color11"
 disabled = false
-format = "([\\[](color10)[+$added]($added_style))( [-$deleted]($deleted_style))"
+format = "([\\[](color10)[+$added]($added_style))( [-$deleted]($deleted_style)[\\]](color10))"
 ignore_submodules = false
 only_nonzero_diffs = true
 
 [git_status]
-ahead = "[ ⇡$count](bold color15)"
-behind = "[ ⇣$count](bold color15)"
-conflicted = "[ ≠$count](bold color11)"
+ahead = "[⇡$count ](bold color15)"
+behind = "[⇣$count ](bold color15)"
+conflicted = "[≠$count ](bold color11)"
 # deleted = "×"
-deleted = "[ ×$count](bold color11)"
+deleted = "[×$count ](bold color11)"
 disabled = false
-diverged = "[ ⇕](bold color11)"
-format = "([$all_status$ahead_behind]($style)[\\]](color10))"
+diverged = "[⇕ ](bold color11)"
+format = "([\\[](color10)[ $all_status$ahead_behind]($style)[\\]](color10))"
 ignore_submodules = false
-modified = "[ !$count](bold color13)"
-renamed = "[ ↪$count](bold color13)" #
-staged = "[ +$count](bold color14)"
-stashed = "[ ☰$count](bold color3)"
+modified = "[!$count ](bold color13)"
+renamed = "[↪$count ](bold color13)" #
+staged = "[+$count ](bold color14)"
+stashed = "[☰$count ](bold color3)"
 style = "bold color5"
 typechanged = ""
-untracked = "[ ?$count](bold color12)"
+untracked = "[?$count ](bold color12)"
 up_to_date = ""
 use_git_executable = false
 
