--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -225,7 +225,7 @@ style = "bold color13"
 added_style = "bold color14"
 deleted_style = "bold color11"
 disabled = false
-format = "([\\[](color10)[+$added]($added_style))( [-$deleted]($deleted_style)[\\]](color10))"
+format = "[\\[](color10)([+$added]($added_style))( [-$deleted]($deleted_style))[\\]](color10)"
 ignore_submodules = false
 only_nonzero_diffs = true
 
