--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -400,7 +400,7 @@ disabled = false
 format = "[\\[](color10)[${symbol}${pyenv_prefix}( ${version})( \\($virtualenv\\))]($style)[\\]](color10)"
 pyenv_prefix = ""
 pyenv_version_name = true
-python_binary = [["python"],["python2"],["python3"]]
+python_binary = ["python","python3","python2"]
 style = "bold color13"
 symbol = "\ue73c" # 
 version_format = "${raw}"
