--- a/config/chrome-flags.conf
+++ b/config/chrome-flags.conf
@@ -1,5 +1,6 @@
---enable-vulkan
---enable-unsafe-webgpu
---enable-webgpu-developer-features
---enable-features=UseSkiaRenderer
 --disable-features=ExtensionManifestV2Unsupported,ExtensionManifestV2Disabled
+--enable-features=Vulkan,VulkanFromANGLE,DefaultANGLEVulkan
+--enable-unsafe-webgpu
+--enable-vulkan
+--enable-webgpu-developer-features
+--ozone-platform=x11
